--- a/public/covid19/index.html
+++ b/public/covid19/index.html
@@ -11,23 +11,37 @@
         <title>Hello, world!</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
-        <div id="chartContainer" style="height: 370px; width: 100%;"></div>
-        <div class="container">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">PAÍS</th>
-                        <th scope="col">CASOS CONFIRMADOS</th>
-                        <th scope="col">MUERTES POR COVID</th>
-                        <th scope="col">DETALLE INFO</th>
-                    </tr>
-                </thead>
-                <tbody id="cuerpotabla">
-                </tbody>
-            </table>
+        <div id="inicio" class="container-fluid row col-12 col-md-4 offset-md-4 p-5 d-block">
+            <form id="formulario">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <button type="submit" class="btn btn-primary mt-2">Submit</button>
+            </form>
         </div>
+        <section id="resultado" class="d-none">
+            <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+            <div class="container">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">PAÍS</th>
+                            <th scope="col">CASOS CONFIRMADOS</th>
+                            <th scope="col">MUERTES POR COVID</th>
+                            <th scope="col">DETALLE INFO</th>
+                        </tr>
+                    </thead>
+                    <tbody id="cuerpotabla">
+                    </tbody>
+                </table>
+            </div>
+        </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
