--- a/public/covid19/index.html
+++ b/public/covid19/index.html
@@ -11,7 +11,21 @@
         <title>Hello, world!</title>
     </head>
     <body>
-        <div id="inicio" class="container-fluid row col-12 col-md-4 offset-md-4 p-5 d-block">
+        <nav class="navbar navbar-expand-lg navbar-light bg-secondary fixed-top mb-5">
+            <div class="container">
+                <a class="navbar-brand text-white">Covid19</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="navbar-nav ms-auto">
+                        <a id="init" class="nav-link text-white" href="">Inicio</a>
+                        <a id="logout" class="nav-link text-white" href="">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div id="inicio" class="container-fluid row col-12 col-md-4 offset-md-4 p-5 d-block mt-5">
             <form id="formulario">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
@@ -21,10 +35,10 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="password">
                 </div>
-                <button type="submit" class="btn btn-primary mt-2">Submit</button>
+                <button type="submit" class="btn btn-primary mt-2">Login</button>
             </form>
         </div>
-        <section id="resultado" class="d-none">
+        <section id="resultado" class="mt-5 d-none">
             <div id="chartContainer" style="height: 370px; width: 100%;"></div>
             <div class="container">
                 <table class="table">
@@ -42,6 +56,23 @@
                 </table>
             </div>
         </section>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
